Details
-
Bug
-
Resolution: Done
-
P2: Important
-
5.7.0
-
None
-
b31b4094e1728d839fef30f5128c81451ea75e4a
Description
Shortcut is not aware of QQC2's item-based popups. Shortcuts trigger always no matter if there are blocking modal popups open, for example. This makes it difficult to implement well-behaving QQC2 applications that utilize shortcuts.
Attachments
Issue Links
- resulted in
-
QTBUG-57172 add ShortcutGroup
- Reported
For Gerrit Dashboard: QTBUG-56562 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
174015,7 | QQuickShortcut: allow setting a custom context matcher | 5.7 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
174646,7 | Fix Shortcut to respect modal popups | 5.7 | qt/qtquickcontrols2 | Status: MERGED | +2 | 0 |
174647,10 | QQuickPopup: use QShortcutMap to grab Back & Escape keys | 5.7 | qt/qtquickcontrols2 | Status: MERGED | -2 | 0 |
174648,2 | Gallery: add Escape shortcut | 5.7 | qt/qtquickcontrols2 | Status: MERGED | +2 | 0 |