Fix Shortcut to respect modal popups

In the Gallery example, the back navigation shortcut no longer
activates when the settings dialog or the about dialog is open.
Notice that the back navigation shortcut still activates while
the options menu is open.

[ChangeLog][Controls][Popup] The QML Shortcut type from QtQuick has
been fixed to respect modal popups from QtQuick Controls 2.

Task-number: QTBUG-56562
Change-Id: I4c3c762e9db0935ef250ff9f8c553e7d211220c7
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>