src/quicktemplates2/quicktemplates2.pri
@@ -42,6 +42,7 @@ HEADERS += \
     $$PWD/qquickrangeslider_p.h \
     $$PWD/qquickscrollbar_p.h \
     $$PWD/qquickscrollindicator_p.h \
+    $$PWD/qquickshortcutcontext_p_p.h \
     $$PWD/qquickslider_p.h \
     $$PWD/qquickspinbox_p.h \
     $$PWD/qquickstackview_p.h \
@@ -93,6 +94,7 @@ SOURCES += \
     $$PWD/qquickrangeslider.cpp \
     $$PWD/qquickscrollbar.cpp \
     $$PWD/qquickscrollindicator.cpp \
+    $$PWD/qquickshortcutcontext.cpp \
     $$PWD/qquickslider.cpp \
     $$PWD/qquickspinbox.cpp \
     $$PWD/qquickstackview.cpp \
